--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
       <p>(no confundir una base de datos con por ejemplo MySQL o MongoDB, estas son solo gestores de bases de datos, uno carga los datos en estos dos gestores nada mas)</p>
       <p>Hay que entender bien la diferencia entre las bases de datos, porque al empezar a armar una base de datos relacionales y cuando vamos por la mitad nos damos cuanta que era mejor hacerlo con una base de datos no relacionales nos vamos a querer cortar las venas con una galletita de agua, por eso hay que saber bien las diferencias y entenderlas
       </p>
+
+
       <h4>BASE DE DATOS RELACIONALES (SQL)</h4>
+
+      <p>SQL es una base de datos relacionales que utiliza una estructura de datos en la que los datos se almacenan en tablas y las relaciones entre las tablas se establecen mediante llaves primarias y llaves foráneas.</p>
       <p>Se caracteriza por ser una coleccion ordenada de registros que se van a organizar en un conjunto de tablas.</p>
       <p>Una TABLA es el elemento principal de una base de datos relacionales (es muy parecida a una hoja de calculos, los registros de informacion se van a formar en filas y columnas), las tablas se relacionan entre si y para ingresar a los datos, usamos el sistema de consulta estructurada (mejor conocido por sus siglas en ingles SQL Structured Query Language) </p>
       <p>Con SQL vamos a poder obtener y consultar los datos de una forma mas organizada, siempre y cuando tengamos en cuenta cual es la estructura de la base de datos con la que estamos trabajando.</p>
@@ -91,6 +95,22 @@
         <li>PostgreSQL</li>
         <li>Oracle</li>
       </ul>
+
+      <h4>BASE DE DATOS NO-RELACIONALES (NO SQL)</h4>
+
+      <p>Estas bases estan diseñadas para modelar datos con estructuras un poco mas especificas y que no necesiten ser relacionados unos datos con otros.</p>
+      <p>Cada entidad va a funcionar de forma independiente y son mucho mas sencillas que las relacionales</p>
+      <p>En estas bases de datos podemos tener redundancia de datos (se pueden repetir datos).</p>
+      <p>PORQUE VAMOS A PERMITIR REPETIR DATOS EN UNA BASE DE DATOS??????</p>
+      <p>El objetivo de estas bases de datos lo que buscan es mejorar el rendimiento y se prioriza el acceso por sobre la normalizacion e integridad de los datos.</p>
+      <p>En este tipo de modelado, se requiere ahorrar poder de computo para poder procesar la mayor cantidad de datos en el menor tiempo posible.</p>
+      <p>Cuando estructuramos una base de datos relacional y hacemos consultas SQL, el servidor puede demorar hasta minutos en darnos una respuesta, porque el ejecutar un codigo SQL le va a demandar cierto procesamiento</p>
+      <p>En cambio las bases de datos NO-RELACIOALES se basan en tener de alguna manera la informacion rapida y disponible para su consulta.</p>
+      <p>El formato mas utilizado en estas bases de datos es el DOCUMENTO.</p>
+      <p>¿QUE ES UN DOCUMENTO?</p>
+      <p>Es una estructura de datos que contiene un conjunto de campos y valores, cada campo puede ser de un tipo diferente y puede ser de varias dimensiones.</p>
+
+
 
     </main>
     <footer></footer>
