llegamos al minuto 29.35

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
         <li>Oracle</li>
       </ul>
 
+      <img src="MULTIMEDIA/SQL.jpg" alt="BASE DE DATOS RELACIONALES">
+      <p>(como se ve en la imagen, una base de datos relacional tiene filas y columnas)</p>
+
       <h4>BASE DE DATOS NO-RELACIONALES (NO SQL)</h4>
+      <p>NO SQL???? no significa que no utiliza SQL sino que es, Not only SQL, o no solamente SQL</p>
 
       <p>Estas bases estan diseñadas para modelar datos con estructuras un poco mas especificas y que no necesiten ser relacionados unos datos con otros.</p>
       <p>Cada entidad va a funcionar de forma independiente y son mucho mas sencillas que las relacionales</p>
@@ -109,6 +113,17 @@
       <p>El formato mas utilizado en estas bases de datos es el DOCUMENTO.</p>
       <p>¿QUE ES UN DOCUMENTO?</p>
       <p>Es una estructura de datos que contiene un conjunto de campos y valores, cada campo puede ser de un tipo diferente y puede ser de varias dimensiones.</p>
+
+      <h4>Ejemplos de gestores de base de datos no relacionales</h4>
+
+      <ul>
+        <li>MongoDB</li>
+        <li>CouchDB</li>
+        <li>Redis</li>
+        <li>Cassandra</li>
+      </ul>
+      <img src="MULTIMEDIA/NO SQL.jpg" alt="BASE DE DATOS NO-RELACIONALES">
+      <p>(como se ve en la imagen, una base de datos no relacionales tiene documentos y cada documento puede tener varios campos)</p>29.37
 
 
 
