esto es una prueba

--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
       <img src="MULTIMEDIA/NO SQL.jpg" alt="BASE DE DATOS NO-RELACIONALES">
       <p>(como se ve en la imagen, una base de datos no relacionales tiene documentos y cada documento puede tener varios campos)</p>29.37
 
+      <div>
+        <h3>Ejemplos de aplicaciones de base de datos</h3>
+        <ul>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+          <li>YouTube</li>
+        </ul>
+        <p>Estas aplicaciones utilizan bases de datos relacionales para almacenar la informacion y para que las aplicaciones puedan funcionar de manera optima.</p>
+      </div>
+
 
 
     </main>
