--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
         <p>Estas aplicaciones utilizan bases de datos relacionales para almacenar la informacion y para que las aplicaciones puedan funcionar de manera optima.</p>
       </div>
 
+      <div>
+        <h3>Ejemplos de aplicaciones de base de datos NO-RELACIONALES</h3>
+        <ul>
+          <li>Redis</li>
+          <li>MongoDB</li>
+          <li>CouchDB</li>
+        </ul>
+        <p>Estas aplicaciones utilizan bases de datos NO-RELACIONALES para almacenar la informacion y para que las aplicaciones puedan funcionar de manera optima.</p>
+      </div>
+
 
 
     </main>
